; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_fcb.c_NtfsOpenRootFCB.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_fcb.c_NtfsOpenRootFCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i32] [i32 92, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @NtfsOpenRootFCB(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32* @NtfsGrabFCBFromTable(i32 %4, i8* bitcast ([2 x i32]* @.str to i8*))
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32* @NtfsMakeRootFCB(i32 %9)
  store i32* %10, i32** %3, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32*, i32** %3, align 8
  ret i32* %12
}

declare dso_local i32* @NtfsGrabFCBFromTable(i32, i8*) #1

declare dso_local i32* @NtfsMakeRootFCB(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
